--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
         "@types/react-dom": "^18.0.9",
         "concurrently": "^7.6.0",
         "json-server": "^0.17.1",
+        "module-alias": "^2.2.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
+        "react-router-dom": "^6.4.4",
         "react-scripts": "5.0.1",
         "typescript": "^4.9.3",
         "web-vitals": "^2.1.4"
