--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/node": "^17.0.45",
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.9",
+        "classnames": "^2.3.2",
         "concurrently": "^7.6.0",
         "json-server": "^0.17.1",
         "module-alias": "^2.2.2",
@@ -19,6 +20,8 @@
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.4.4",
         "react-scripts": "5.0.1",
+        "sass": "^1.56.1",
+        "styled-components": "^5.3.6",
         "typescript": "^4.9.3",
         "web-vitals": "^2.1.4"
     },
@@ -47,5 +50,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/styled-components": "^5.1.26"
     }
 }
