--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "json-server": "^0.17.1",
         "module-alias": "^2.2.2",
         "react": "^18.2.0",
+        "react-content-loader": "^6.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.4.4",
@@ -27,7 +28,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "server": "json-server  -p 3001 -w ./api/index.js",
+        "server": "json-server  -p 3001 -w ./api/db.json",
         "dev": "concurrently \"npm run server\" \"npm run start\"",
         "build": "react-scripts build",
         "test": "react-scripts test",
