--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "classnames": "^2.3.2",
         "concurrently": "^7.6.0",
         "json-server": "^0.17.1",
-        "module-alias": "^2.2.2",
         "react": "^18.2.0",
         "react-content-loader": "^6.2.0",
         "react-dom": "^18.2.0",
@@ -23,15 +22,15 @@
         "react-scripts": "5.0.1",
         "sass": "^1.56.1",
         "styled-components": "^5.3.6",
-        "typescript": "^4.9.3",
-        "web-vitals": "^2.1.4"
+        "typescript": "^4.9.3"
     },
     "scripts": {
         "start": "react-scripts start",
         "server": "json-server  -p 3001 -w ./api/db.json",
         "dev": "concurrently \"npm run server\" \"npm run start\"",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "jest",
+        "coverage": "jest --collect-coverage",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -53,6 +52,68 @@
         ]
     },
     "devDependencies": {
-        "@types/styled-components": "^5.1.26"
+        "@babel/core": "^7.20.5",
+        "@babel/preset-env": "^7.20.2",
+        "@jest/globals": "^29.3.1",
+        "@types/redux-mock-store": "^1.0.3",
+        "@types/styled-components": "^5.1.26",
+        "babel-jest": "^29.3.1",
+        "eslint-plugin-testing-library": "^5.9.1",
+        "jest": "^29.3.1",
+        "jest-environment-jsdom": "^29.3.1",
+        "redux-mock-store": "^1.5.4",
+        "ts-jest": "^29.0.3"
+    },
+    "jest": {
+        "roots": [
+            "<rootDir>/src"
+        ],
+        "modulePaths": [
+            "<rootDir>/src"
+        ],
+        "moduleDirectories": [
+            "src",
+            "node_modules"
+        ],
+        "collectCoverageFrom": [
+            "src/**/*.{js,jsx,ts,tsx}"
+        ],
+        "resolver": "jest-pnp-resolver",
+        "automock": false,
+        "testEnvironment": "jsdom",
+        "testMatch": [
+            "<rootDir>/src/**/__tests__/**/*.+(ts|tsx|js)",
+            "<rootDir>/src/**/?(*.)+(spec|test).+(ts|tsx|js)"
+        ],
+        "setupFilesAfterEnv": [
+            "@testing-library/jest-dom/extend-expect"
+        ],
+        "transformIgnorePatterns": [
+            "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$",
+            "^.+\\.module\\.(css|sass|scss)$"
+        ],
+        "moduleNameMapper": {
+            "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+        },
+        "moduleFileExtensions": [
+            "web.js",
+            "js",
+            "json",
+            "web.jsx",
+            "jsx",
+            "ts",
+            "tsx",
+            "node"
+        ],
+        "globals": {
+            "ts-jest": {
+                "diagnostics": {
+                    "ignoreCodes": [
+                        7006,
+                        7016
+                    ]
+                }
+            }
+        }
     }
 }
